test_fixtures/inheritance/parenthesized_superclass.lox
class Foo {}

// ParserError: UnexpectedToken found OpenParen at l4c13 expected Identifier
class Bar < (Foo) {}
